--- a/app/src/main/res/layout/tower_a_levels_detail.xml
+++ b/app/src/main/res/layout/tower_a_levels_detail.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:text="level x"
         android:textSize="40sp"
@@ -24,11 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
-        android:text="AP: 0"
+        android:text="Total: 0"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
         app:layout_constraintTop_toTopOf="@+id/towerLevelName" />
 
     <TextView
@@ -39,9 +39,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:text="Warning: 0"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
         app:layout_constraintTop_toBottomOf="@+id/towerLevelName" />
 
     <TextView
@@ -50,44 +49,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="200dp"
         android:text="Critical: 0"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/warningTextView"
-        app:layout_constraintTop_toTopOf="@+id/warningTextView" />
-
-    <TextView
-        android:id="@+id/normalTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="normal: 0"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/warningTextView"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
         app:layout_constraintTop_toTopOf="@+id/warningTextView" />
 
     <TextView
         android:id="@+id/towerAveDownload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Download: 100Mps"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/towerAveUpload"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/warningTextView"
         app:layout_constraintTop_toBottomOf="@+id/warningTextView" />
 
     <TextView
         android:id="@+id/towerAveUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="200dp"
         android:text="Upload: 100Mps"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/warningTextView" />
+        app:layout_constraintStart_toStartOf="@+id/towerAveDownload"
+        app:layout_constraintTop_toTopOf="@+id/towerAveDownload" />
 </androidx.constraintlayout.widget.ConstraintLayout>
