--- a/app/src/main/res/layout/activity_ssid.xml
+++ b/app/src/main/res/layout/activity_ssid.xml
@@ -10,6 +10,8 @@
         android:id="@+id/ssidRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fadeScrollbars="true"
+        android:scrollbars="vertical"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
