--- a/app/src/main/res/layout/building_listview_detail.xml
+++ b/app/src/main/res/layout/building_listview_detail.xml
@@ -24,10 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="40dp"
         android:text="Warning: 0"
         android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/towerNameTextView" />
 
@@ -37,10 +37,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="270dp"
         android:text="Critical: 0"
         android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/warningNumTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/warningNumTextView" />
 
     <TextView
@@ -49,9 +49,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
         android:text="AP: 100"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/warningNumTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/warningNumTextView" />
 
