--- a/app/src/main/res/layout/ssid_details.xml
+++ b/app/src/main/res/layout/ssid_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ssidLayout"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="200dp"
     android:animateLayoutChanges="false"
     android:fadeScrollbars="false">
 
@@ -17,7 +17,7 @@
         android:text="ping"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/statusAPTextView"
-        app:layout_constraintTop_toBottomOf="@+id/statusAPTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/runtimessidTextView" />
 
     <TextView
         android:id="@+id/ssidTextView"
@@ -64,10 +64,10 @@
         android:id="@+id/runtimessidTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
+        android:layout_marginTop="10dp"
         android:text="runtime"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/ssidTextView"
-        app:layout_constraintTop_toTopOf="@+id/statusAPTextView" />
+        app:layout_constraintStart_toStartOf="@+id/statusAPTextView"
+        app:layout_constraintTop_toBottomOf="@+id/statusAPTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
