--- a/app/src/main/res/layout/tower_a_levels_detail.xml
+++ b/app/src/main/res/layout/tower_a_levels_detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="250dp">
 
     <TextView
         android:id="@+id/towerLevelName"
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:text="level x"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="100dp"
         android:text="Total: 0"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
-        app:layout_constraintTop_toTopOf="@+id/towerLevelName" />
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/warningTextView"
@@ -39,9 +39,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:text="Warning: 0"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
-        app:layout_constraintTop_toBottomOf="@+id/towerLevelName" />
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/numAPTextView"
+        app:layout_constraintTop_toBottomOf="@+id/numAPTextView" />
 
     <TextView
         android:id="@+id/criticalTextView"
@@ -49,29 +49,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="200dp"
+        android:layout_marginTop="10dp"
         android:text="Critical: 0"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
-        app:layout_constraintTop_toTopOf="@+id/warningTextView" />
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/warningTextView"
+        app:layout_constraintTop_toBottomOf="@+id/warningTextView" />
 
     <TextView
         android:id="@+id/towerAveDownload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:text="Download: 100Mps"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/warningTextView"
-        app:layout_constraintTop_toBottomOf="@+id/warningTextView" />
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/towerAveUpload"
+        app:layout_constraintStart_toStartOf="@+id/towerLevelName"
+        app:layout_constraintTop_toBottomOf="@+id/criticalTextView" />
 
     <TextView
         android:id="@+id/towerAveUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
+        android:layout_marginBottom="10dp"
         android:text="Upload: 100Mps"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/towerAveDownload"
-        app:layout_constraintTop_toTopOf="@+id/towerAveDownload" />
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/towerAveDownload" />
 </androidx.constraintlayout.widget.ConstraintLayout>
