--- a/app/src/main/res/layout/activity_show_ap_details.xml
+++ b/app/src/main/res/layout/activity_show_ap_details.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/showAPRefreshLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -26,7 +29,6 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Last Updated:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -36,7 +38,6 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Building:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/Runtime"
@@ -46,7 +47,6 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Jitter:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -77,7 +77,6 @@
         android:id="@+id/textView3"
         android:layout_width="69dp"
         android:layout_height="29dp"
-        android:layout_marginTop="20dp"
         android:text="Upload:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -87,7 +86,6 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Download:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -106,7 +104,6 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="Level:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -196,4 +193,4 @@
         tools:layout_editor_absoluteX="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
