--- a/app/src/main/res/layout/building_listview_detail.xml
+++ b/app/src/main/res/layout/building_listview_detail.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="130dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="Warning: 0"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,34 +56,42 @@
         app:layout_constraintTop_toTopOf="@+id/warningNumTextView" />
 
     <TextView
-        android:id="@+id/aveInternetHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Average Internet Speedtest:"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/warningNumTextView" />
-
-    <TextView
         android:id="@+id/averageDownloadTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Download: 100Mps"
+        android:layout_marginStart="250dp"
+        android:text="100Mps"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/aveInternetHeader"
-        app:layout_constraintTop_toBottomOf="@+id/aveInternetHeader" />
+        app:layout_constraintStart_toStartOf="@+id/textView15"
+        app:layout_constraintTop_toTopOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/averageUploadTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Upload: 100Mps"
+        android:text="100Mps"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/averageDownloadTextView"
-        app:layout_constraintTop_toBottomOf="@+id/averageDownloadTextView" />
+        app:layout_constraintTop_toTopOf="@+id/textView16" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Download:"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/warningNumTextView" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload:"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView15"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
