--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,8 @@
 
     <EditText
         android:id="@+id/phoneNumberEditText"
+        android:maxLines="1"
+        android:inputType="number"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -32,6 +34,8 @@
 
     <EditText
         android:id="@+id/passwordEditText"
+        android:maxLines="1"
+        android:inputType="textPassword"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -109,5 +113,21 @@
             android:text="@string/register"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/phonenumbervalidatorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/indicatorRed"
+        app:layout_constraintStart_toStartOf="@+id/phoneNumberEditText"
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText" />
+
+    <TextView
+        android:id="@+id/passwordvalidatorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/indicatorRed"
+        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
