--- a/app/src/main/res/layout/activity_phone_o_t_pactivity.xml
+++ b/app/src/main/res/layout/activity_phone_o_t_pactivity.xml
@@ -12,15 +12,24 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="we will send you a One Time Password to your Phone NUmber"
+        android:text="we will send you a One Time Password to your Phone Number"
         android:textSize="20dp"
         android:textAlignment="center"/>
     <EditText
         android:id="@+id/otpPhoneNumberEditText"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:inputType="number"
         android:hint="@string/phone_number"
         android:layout_marginTop="70dp"/>
+
+    <TextView
+        android:id="@+id/phoneOTPValidatorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/indicatorRed" />
+
     <Button
         android:id="@+id/otpNextButton"
         android:layout_width="160dp"
