--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">dev1.ectivisecloud.com</domain>
+        <domain includeSubdomains="true">api.ectivisecloud.com</domain>
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">192.168.1.124</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
