--- a/app/src/main/res/layout/activity_show_ap_details.xml
+++ b/app/src/main/res/layout/activity_show_ap_details.xml
@@ -8,6 +8,10 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/mainLayout"
@@ -20,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/graph"
+        app:layout_constraintBottom_toTopOf="@+id/downloadgraph"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -35,15 +39,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Building:"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/Runtime"
-        app:layout_constraintTop_toBottomOf="@+id/Runtime" />
-
-    <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,25 +48,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/Runtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:text="Runtime:"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Ping:"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintStart_toStartOf="@+id/BuildingTextView"
+        app:layout_constraintTop_toBottomOf="@+id/BuildingTextView" />
 
     <TextView
         android:id="@+id/textView3"
@@ -92,33 +76,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <View
+        android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Level:"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <TextView
-        android:id="@+id/runtimessidTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:text="runtime"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toEndOf="@+id/Runtime"
-        app:layout_constraintTop_toTopOf="@+id/Runtime" />
+        app:layout_constraintTop_toBottomOf="@+id/BuildingTextView" />
 
     <TextView
         android:id="@+id/downloadAPTextView"
@@ -151,18 +116,21 @@
         android:id="@+id/levelAPTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
         android:text="level"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/BuildingTextView"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
+        app:layout_constraintTop_toTopOf="@+id/BuildingTextView" />
 
     <TextView
         android:id="@+id/BuildingTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/runtimessidTextView"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="building" />
 
     <TextView
@@ -184,7 +152,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView7" />
 
     <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
+        android:id="@+id/downloadgraph"
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:layout_marginTop="30dp"
@@ -192,5 +160,33 @@
         app:layout_constraintTop_toBottomOf="@+id/timestampTextView"
         tools:layout_editor_absoluteX="20dp" />
 
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/uploadgraph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/downloadgraph"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/pinggraph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/uploadgraph"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/jittergraph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/pinggraph"
+        tools:layout_editor_absoluteX="20dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
