--- a/app/src/main/res/menu/menu_layout.xml
+++ b/app/src/main/res/menu/menu_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/refreshmenu"
-        android:title="Refresh"
+        android:title="Settings"
         app:showAsAction="never" />
 
     <item android:id="@+id/logoutmenu"
